Get rid of deprecated Double and Float constructor usage